# base-agent-toolkit

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  build_phase1.py  build_phase2.py  build_phase3.py  build_phase4.py  build_phase5.py  build_phase6.py  build_phase7.py  pyproject.toml  ruff.toml
docs/: architecture.md
docs/guides/: ai-agents.md  b20-tokens.md  defi-protocols.md  security.md
examples/: b20_deploy.py  defi_swap.py  full_agent.py  portfolio_track.py  x402_payment.py
src/base_agent_toolkit/: __init__.py  config.py  constants.py  exceptions.py  logging.py  network.py  py.typed  registry.py  types.py
src/base_agent_toolkit/agent/: __init__.py  base.py  executor.py  strategy.py  tools.py
src/base_agent_toolkit/agent/strategies/: __init__.py  dca.py  rebalance.py
src/base_agent_toolkit/b20/: __init__.py  abi.py  batch.py  events.py  factory.py  permit.py  token.py  types.py
src/base_agent_toolkit/cli/: __init__.py  main.py
src/base_agent_toolkit/defi/: __init__.py  abi.py  aerodrome.py  approval.py  morpho.py  portfolio.py  swap.py  uniswap.py  weth.py
src/base_agent_toolkit/provider/: __init__.py  async_provider.py  base.py  manager.py
src/base_agent_toolkit/security/: __init__.py  keystore.py  validation.py
src/base_agent_toolkit/utils/: __init__.py  abi.py  formatting.py  multicall.py  rate_limiter.py  retry.py
src/base_agent_toolkit/wallet/: __init__.py  contract.py  erc20.py  gas.py  hd.py  simulator.py  tokens.py  tx_builder.py  wallet.py
src/base_agent_toolkit/x402/: __init__.py  client.py  middleware.py  payment.py
tests/: conftest.py  test_agent.py  test_b20.py  test_cli.py  test_config.py  test_defi.py  test_network.py  test_provider.py  test_registry.py  test_security.py  test_types.py  test_utils.py  test_wallet.py  test_x402.py
tests/integration/: __init__.py  test_provider.py
