[project]
name = "base-agent-toolkit"
version = "0.1.0"
description = "Python SDK for building AI agents on Base L2"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ifiokmase8"},
]
keywords = ["base", "ethereum", "web3", "ai-agent", "defi", "b20", "x402"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "web3>=6.0.0",
    "eth-account>=0.10.0",
    "click>=8.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "mypy>=1.0",
]

[project.scripts]
bat = "base_agent_toolkit.cli.main:app"

[project.urls]
Homepage = "https://github.com/ifiokmase8/base-agent-toolkit"
Documentation = "https://docs.base.org"
Repository = "https://github.com/ifiokmase8/base-agent-toolkit"
"Bug Tracker" = "https://github.com/ifiokmase8/base-agent-toolkit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/base_agent_toolkit"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104", "D107", "D203", "D213"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
